[tool.poetry]
name = "streamlit-docker-template"
version = "0.1.0"
description = ""
authors = ["Flávio Codeço Coelho <fccoelho@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.5.1"
pandas = "^1.4.1"
numpy = "^1.22.2"
SQLAlchemy = "^1.4.31"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
